# WB_practice_python

./: HW_1_SQL.sql  HW_1_SQL.txt  HW_2_SQL.sql  HW_2_SQL.txt  HW_3_SQL.sql  HW_4_SQL.sql  Individual.sql  Individual.txt  README.md  WB_2.ipynb  WB_3.ipynb  math_1.ipynb  pyproject.toml
.ipynb_checkpoints/: WB_1-checkpoint.ipynb
