[tool.poetry]
name = "wb-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.26.0"
jupyterlab = "^4.0.6"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
